--- a/tdepot-statistics.sty
+++ b/tdepot-statistics.sty
@@ -36,3 +36,4 @@
 \newcommand{\isBin}[1]{\isDist{\mathrm{Bin}}{#1}}
 \newcommand{\isGeom}[1]{\isDist{\mathrm{Geom}}{#1}}
 \newcommand{\isBern}[1]{\isDist{\mathrm{Bern}}{#1}}
+\newcommand{\isExp}[1]{\isDist{\mathrm{Exp}}{#1}}
