--- a/tex/assignment.cls
+++ b/tex/assignment.cls
@@ -5,11 +5,12 @@
 \LoadClass[11pt,a4paper]{article}
 
 \RequirePackage[left=1cm,right=1cm,top=1cm,bottom=2cm]{geometry}
-
-% TeX-Depot packages
-\RequirePackage{tdepot}
+\RequirePackage{enumitem}
 
 % Sans serif
 \renewcommand{\familydefault}{\sfdefault}
+
+% No indents on new paragraphs
+\setlength\parindent{0pt}
 
 \newenvironment{enumalpha}{\begin{enumerate}[label=(\alph*)}{\end{enumerate}}
