--- a/tex/latex/lb_base.sty
+++ b/tex/latex/lb_base.sty
@@ -3,11 +3,23 @@
 % Packages which I almost always find useful
 \RequirePackage{bm}
 \RequirePackage{commath}
+\RequirePackage{enumitem}
+
+
+%% OPTIONS %%
+
+% Option for serif font
+\DeclareOption{sans}{\renewcommand{\familydefault}{\sfdefault}}
+
+\ProcessOptions\relax
+
 
 % Provides warnings if labels are unused
 \RequirePackage{refcheck}
 \norefnames
 \nocitenames
+
+
 
 % Allow numbering of individuals lines in an align env
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
@@ -38,3 +50,7 @@
 \newcommand{\curl}{\vder \times}    % Curl
 
 % Vector integrals
+
+
+% Provide reasoning in a \text env alongside a line of maths
+\newcommand{\rea}[1]{\qquad \qquad \left(\text{#1}\right)}
