--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -40,3 +40,11 @@
 \newcommand{\isGeom}[1]{\sim\Geom{#1}}
 \newcommand{\isGauss}[1]{\sim\Gauss{#1}}
 \newcommand{\isStdGauss}{\sim\StdGauss}
+
+
+% Hypothesis tests
+\newcommand{\hypothesis}[1]{%
+    \[
+    H_0\,:\, #1
+    \]
+}
