--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -33,14 +33,17 @@
 \newcommand{\HypGeo}[1]{\Dist{\mathrm{Hypergeometric}}{#1}}
 \newcommand{\Uniform}[1]{\Dist{\mathrm{U}}{#1}}
 \newcommand{\StdGauss}{\Gauss{0,1}}
+\newcommand{\NegBin}[1]{\Dist{\mathrm{NB}}{#1}}
 
 % With \sim
+\newcommand{\isBern}[1]{\sim\Bern{#1}}
 \newcommand{\isPois}[1]{\sim\Pois{#1}}
 \newcommand{\isBin}[1]{\sim\Bin{#1}}
 \newcommand{\isGeom}[1]{\sim\Geom{#1}}
 \newcommand{\isGauss}[1]{\sim\Gauss{#1}}
 \newcommand{\isStdGauss}{\sim\StdGauss}
-
+\newcommand{\isNegBin}[1]{\sim\NegBin{#1}}
+\newcommand{\isUniform}[1]{\sim\Uniform{#1}}
 
 % Hypothesis tests
 \newcommand{\hypothesis}[1]{%
