--- a/tex/latex/lb_base.sty
+++ b/tex/latex/lb_base.sty
@@ -54,3 +54,7 @@
 
 % Provide reasoning in a \text env alongside a line of maths
 \newcommand{\rea}[1]{\qquad \qquad \left(\text{#1}\right)}
+
+% argmax and argmin
+\DeclareMathOperator{\argmax}{argmax}
+\DeclareMathOperator{\argmin}{argmin}
