--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -34,6 +34,7 @@
 \newcommand{\Uniform}[1]{\Dist{\mathrm{U}}{#1}}
 \newcommand{\StdGauss}{\Gauss{0,1}}
 \newcommand{\NegBin}[1]{\Dist{\mathrm{NB}}{#1}}
+\newcommand{\GamDist}[1]{\Dist{\mathrm{Gamma}}{#1}}
 
 % With \sim
 \newcommand{\isBern}[1]{\sim\Bern{#1}}
@@ -44,6 +45,7 @@
 \newcommand{\isStdGauss}{\sim\StdGauss}
 \newcommand{\isNegBin}[1]{\sim\NegBin{#1}}
 \newcommand{\isUniform}[1]{\sim\Uniform{#1}}
+\newcommand{\isGamma}[1]{\sim\GamDist{#1}}
 
 % Hypothesis tests
 \newcommand{\hypothesis}[1]{%
