Symlink tex style files

--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -46,6 +46,7 @@
 \newcommand{\isNegBin}[1]{\sim\NegBin{#1}}
 \newcommand{\isUniform}[1]{\sim\Uniform{#1}}
 \newcommand{\isGamma}[1]{\sim\GamDist{#1}}
+\newcommand{\isExp}[1]{\sim\Exp{#1}}
 
 % Hypothesis tests
 \newcommand{\hypothesis}[1]{%
