--- a/tex/latex/lb_statistics.sty
+++ b/tex/latex/lb_statistics.sty
@@ -37,6 +37,8 @@
 \newcommand{\GamDist}[1]{\Dist{\mathrm{Gamma}}{#1}}
 \newcommand{\BetaDist}[1]{\Dist{\mathrm{Beta}}{#1}}
 \newcommand{\Cauchy}[1]{\Dist{\mathrm{Cauchy}}{#1}}
+\newcommand{\Trinom}[1]{\Dist{\mathrm{Tri}}{#1}}
+\newcommand{\Dir}[1]{\Dist{\mathrm{Dir}}{#1}}
 
 % With \sim
 \newcommand{\isBern}[1]{\sim\Bern{#1}}
@@ -51,17 +53,21 @@
 \newcommand{\isExp}[1]{\sim\Exp{#1}}
 \newcommand{\isBeta}[1]{\sim\BetaDist{#1}}
 \newcommand{\isCauchy}[1]{\sim\Cauchy{#1}}
+\newcommand{\isTrinom}[1]{\sim\Trinom{#1}}
+\newcommand{\isDir}[1]{\sim\Dir{#1}}
 
 % Weirder notation using subscripts
 \newcommand{\ChiSq}[1]{\chi^2_{#1}}
 \newcommand{\FDist}[1]{F_{#1}}
 \newcommand{\TDist}[2]{t_{#1}\left(#2\right)}
 \newcommand{\StdT}[1]{t_{#1}}
+\newcommand{\Multinom}[2]{\mathrm{Multi}_{r}\left(#2\right)}
 
 \newcommand{\isChiSq}[1]{\sim\ChiSq{#1}}
 \newcommand{\isF}[1]{\sim\FDist{#1}}
 \newcommand{\isT}[2]{\sim\TDist{#1}{#2}}
 \newcommand{\isStdT}[1]{\sim\StdT{#1}}
+\newcommand{\isMultinom}[2]{\sim\Multinom{#1}{#2}}
 
 % Hypothesis tests
 \newcommand{\hypothesis}[1]{%
