fix local version conflicts

--- a/tex/latex/lb_theory.sty
+++ b/tex/latex/lb_theory.sty
@@ -6,7 +6,7 @@
 % TODO: Add options to specify the numbering schemes
 
 % Nice boxed theorem environments
-
+\RequirePackage{mdframed}
 \mdtheorem{theorem}{Theorem}[subsection]
 \mdtheorem{defn}{Definition}
 \mdtheorem{result}{Result}
