--- a/tex/latex/lb_base.sty
+++ b/tex/latex/lb_base.sty
@@ -1,9 +1,9 @@
 \ProvidesPackage{lb_base}[30/03/2021]
 
 % Packages which I almost always find useful
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
+\RequirePackage{amsmath}
+\RequirePackage{amsfonts}
+\RequirePackage{amssymb}
 \RequirePackage{mathtools}
 \RequirePackage{bm}
 \RequirePackage{commath}
